[package]
name = "crml-governance"
version = "2.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/ng8eke/benson"
description = "A runtime module for decentralized governance of the Benson protocol"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.102", optional = true }
benson-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }
frame-support = { git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false }
frame-system = { git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false }
pallet-scheduler = { git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false }
sp-std = { git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
sp-runtime = { git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false  }

[dev-dependencies]
crml-generic-asset = { path = "../generic-asset"}
sp-io = { git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6"}
sp-core = { git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6"}

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
	"benson-primitives/std",
	"crml-support/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-scheduler/std",
	"scale-info/std",
]
