[package]
name = "crml-nft"
version = "2.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"
description = "Benson NFT module"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", default-features = false, features = ["derive"], optional = true }
log = { version = "0.4.14", default-features = false }
variant_count = "1.0.0"
hex = { version = "0.4.3", default-features = false }
benson-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }
sp-core = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false  }
sp-io = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false  }
sp-runtime = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false  }
sp-std = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false  }
frame-benchmarking = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false, optional = true }
frame-support = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false  }
frame-system = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false  }

[dev-dependencies]
crml-generic-asset = { path = "../generic-asset" }
serde_json = "1.0"

[features]
default = ["std"]
std = [
	"benson-primitives/std",
	"crml-support/std",
	"codec/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]
