[package]
name = "crml-scaling"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"
description = "Benson temporary pallet to scale down CENNZ and CPAY balances"

[dependencies]
codec = { version = "1.3.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4", default-features = false }
frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4", default-features = false }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", default-features = false, branch = "1.0.0-rc4" }
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", default-features = false, branch = "1.0.0-rc4" }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4", default-features = false }
pallet-generic-asset = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4", default-features = false }
pallet-sudo = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4", default-features = false }

[dev-dependencies]
benson-testing = { path = "../../testing"}
benson-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"sp-runtime/std",
	"pallet-generic-asset/std",
	"pallet-sudo/std",
]
