[package]
name = "crml-transaction-payment"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"
description = "Benson pallet to manage transaction payments"

[dependencies]
codec = { version = "1.3.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
benson-primitives = { path = "../../primitives", default-features = false }
frame-support = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.1", default-features = false }
frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.1", default-features = false }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.1", default-features = false }
sp-arithmetic = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.1", default-features = false }
sp-std = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.1", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.1" }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.1" }
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"benson-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
