[package]
name = "crml-transaction-payment"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"
description = "Benson pallet to manage transaction payments"

[dependencies]
codec = { version = "1.3.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }
benson-primitives = { path = "../../primitives", default-features = false }
frame-support = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6", default-features = false }
frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6", default-features = false }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6", default-features = false }
sp-arithmetic = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6", default-features = false }
sp-std = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6", default-features = false }
smallvec = "1.4.1"
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6", default-features = false }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6" }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6" }
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", rev = "2.0.6" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"benson-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
