[package]
name = "crml-transaction-payment"
version = "2.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"
description = "Benson pallet to manage transaction payments"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.102", optional = true }
benson-primitives = { path = "../../primitives", default-features = false }
frame-support = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
frame-system = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
sp-runtime = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
sp-arithmetic = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
sp-std = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
smallvec = "1.6.1"
sp-io = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
sp-core = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba" }
sp-core = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba" }
sp-io = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba" }
smallvec = "1.6.1"
serde_json = "1.0.50"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"benson-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
