[package]
name = "crml-staking-reward-curve"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>", "Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"
description = "Reward Curve for Benson staking pallet"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.7", features = ["full", "visit"] }
quote = "1.0.3"
proc-macro2 = "1.0.6"
proc-macro-crate = "0.1.4"

[dev-dependencies]
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4" }
