[package]
name = "crml-staking-rpc"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"
description = "Node-specific RPC methods for interaction with staking."
readme = "README.md"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
sp-blockchain = { default-features = false, git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6" }
sp-core = { default-features = false, git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6" }
sp-rpc = { default-features = false, git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6" }
serde = { version = "1.0.102", features = ["derive"] }
sp-runtime = { default-features = false, git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6" }
sp-api = { default-features = false, git = "https://github.com/benson/substrate", rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6" }
crml-staking-rpc-runtime-api = { default-features = false, version = "1.0.0", path = "./runtime-api" }

[dev-dependencies]
serde_json = "1.0.41"
