[package]
name = "crml-eth-wallet-rpc-runtime-api"
version = "2.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/ng8eke/benson"
description = "Runtime API definition required by ethereum wallet RPC extensions."

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
crml-eth-wallet = { default-features = false, path = "../../" }
crml-support = { default-features = false, path = "../../../support" }
sp-api = { git = "https://github.com/benson/substrate", rev = "86a3bab75c656f6f759dbd9e6513f314dc185abe", default-features = false }
sp-std = { git = "https://github.com/benson/substrate", rev = "86a3bab75c656f6f759dbd9e6513f314dc185abe", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-std/std",
]
