[package]
name = "crml-governance-rpc-runtime-api"
version = "2.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/ng8eke/benson"
description = "Runtime API definition required by Governance RPC extensions."

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
crml-governance = { default-features = false, path = "../../" }
sp-api = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false }
sp-std = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-std/std",
]
