[package]
name = "crml-staking-rpc-runtime-api"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"
description = "Runtime API definition required by Staking RPC extensions."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-api = { default-features = false, git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735" }
sp-std = { default-features = false, git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735" }
sp-runtime = { default-features = false, git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
]
